scrollbar height fixed

--- a/css/_resets.scss
+++ b/css/_resets.scss
@@ -31,6 +31,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   background-color: #0ae;
+  height: 100px;
 
   background-image: -webkit-gradient(
     linear,
